<resources>
    <string name="app_name">KeBandung</string>
    <string name="btn_next">Lanjut</string>
    <string name="btn_skip">Lewati</string>
    <string name="title_one_fungsionalitas">Fungsionalitas</string>
    <string name="desc_one">KeBandung merupakan aplikasi yang berfungsi untuk para pariwisatawan yang hendak berlibur ke
        Kota Bandung.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_auth">Ayo bergabung untuk mengembangkan sektor pariwisata Kota Bandung!</string>
    <string name="btn_register">Daftar</string>
    <string name="btn_login">Masuk</string>
    <string name="text_or">—Atau—</string>
    <string name="btn_login_guest">Masuk Tanpa Akun</string>
    <string name="title_login">Masuk ke dalam aplikasi</string>
    <string name="account_name">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="account_namemail">Nama Pengguna/Email</string>
    <string name="password">Kata Sandi</string>
    <string name="text_createaccount">Buat akun baru</string>
    <string name="forgot_password">| Lupa Password</string>
    <string name="username_full">Nama Lengkap</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="prompt">Kategori Tempat</string>
    <string name="daerah">Daerah Destinasi</string>
    <string name="kategori_tempat">Kategori Tempat</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>
