<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".auth.LoginFragment"
        android:fillViewport="true">

<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
    />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgIcon"
            android:layout_margin="@dimen/_8sdp"
    android:padding="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogin"
            android:text="@string/title_login"
            style="@style/DarkMedText"
    />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/tvLogin"
                android:hint="@string/account_namemail"
                android:visibility="visible"
                android:background="@null"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryGray"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/textUsername"
                android:hint="@string/password"
                android:visibility="visible"
                android:background="@null"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleDrawable="@drawable/btn_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryGray">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryGray"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textPassword"
                android:background="@drawable/btn_white"
                style="@style/DarkMedText"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
        />

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
             android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp">



        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegister"
                android:text="@string/text_createaccount"
                android:alpha="0.5"
                android:textSize="@dimen/_10ssp"
                style="@style/DarkRegText"
                android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvForgotPassword"
                android:layout_toRightOf="@id/tvRegister"
                android:text="@string/forgot_password"
                android:alpha="0.5"
                android:textSize="@dimen/_10ssp"
                style="@style/DarkRegText"
        />
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>